kubernetes/applications/edge-service/production/patch-probes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  template:
    spec:
      containers:
        - name: edge-service
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9000
            failureThreshold: 1
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9000
            failureThreshold: 25
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 5
