kubernetes/applications/edge-service/production/patch-volumes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  template:
    spec:
      containers:
        - name: edge-service
          volumeMounts:
            - name: redis-credentials-volume
              mountPath: /workspace/secrets/redis
      volumes:
        - name: redis-credentials-volume
          secret:
            secretName: grouphq-redis-credentials
