kubernetes/applications/edge-service/production/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grouphq-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/actuator" {
        deny all;
        return 403;
      }
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.org/websocket-services: "edge-service"
    nginx.org/proxy-connect-timeout: "3600"
    nginx.org/proxy-read-timeout: "3600"
spec:
  rules:
    - host: grouphq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
  tls:
    - secretName: edge-service-cert
      hosts:
        - grouphq.org
